// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render custom handle 1`] = `
<div
  className="mui-node-handler"
>
  <div
    className="node-handler-icon"
  >
    <img
      src="/foo"
    />
  </div>
</div>
`;

exports[`Render custom handle that returns null 1`] = `
<div
  className="mui-node-handler"
>
  <div
    className="node-handler-icon"
  >
    <i
      className="far fa-bars fa-lg"
    />
  </div>
</div>
`;

exports[`Render draggable handle 1`] = `
<div
  className="mui-node-handler mui-node-handler-draggable"
>
  <div
    className="node-handler-icon"
  >
    <i
      className="far fa-bars fa-lg"
    />
  </div>
</div>
`;

exports[`Render loading handle 1`] = `
<div
  className="mui-node-handler"
>
  <div
    className="node-handler-icon"
  >
    <i
      className="far fa-spinner mui-loading-spinner"
    />
  </div>
</div>
`;

exports[`Render nondraggable handle 1`] = `
<div
  className="mui-node-handler"
>
  <div
    className="node-handler-icon"
  >
    <i
      className="far fa-bars fa-lg"
    />
  </div>
</div>
`;
